Fix: Drop-down menu font style was not applying on Firefox #110

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -147,7 +147,7 @@
 }
 
 html {
-    font-family: "Inter", serif;
+    font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 425;
     font-style: normal;
